--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.7",
     "concurrently": "^7.3.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.1.0",
